added one more line of code

--- a/webapp1/Pages/Index.cshtml
+++ b/webapp1/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Terraform on .NET 6.0 LTS</h1>
+    <h1 class="display-4">Welcome to Terraform on .NET 4.0 LTS</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://terrafrom.io">building Infra as code (IaC)</a>.</p>
 </div>
